# 设置最低 CMake 版本
cmake_minimum_required(VERSION 2.8)

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)
CMAKE_POLICY(SET CMP0003 NEW)

# 启用GCC C++0X 优化3 管道编译
IF(CMAKE_COMPILER_IS_GNUCXX)
LIST(APPEND CMAKE_CXX_FLAGS "-std=c++0x -Ofast -pipe")
# -finput-charset=gb2312
ENDIF()

# CPU架构
IF(NOT ARCH)
SET(ARCH $ENV{ARCH} CACHE INTERNAL arch)
ENDIF(NOT ARCH)

# Mingw路径
IF(CMAKE_COMPILER_IS_GNUCXX)
	STRING(REPLACE "\\" "/" MINGW_PATH $ENV{MINGW} )
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

# 安装路径
IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(BIN_PATH Bin_GCC_${ARCH})
	SET(LIB_PATH Lib_GCC_${ARCH})
ELSE(CMAKE_COMPILER_IS_GNUCXX)
	SET(BIN_PATH Bin_VC_${ARCH})
	SET(LIB_PATH Lib_VC_${ARCH})
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

# 增加子目录
ADD_SUBDIRECTORY(Bene)